Fix spacing issue with html element
The html wasn't taking up the entire window height

--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@ html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    height: 100%;
 }
 
 body {
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    
+    justify-content: center;
+    align-items: center;
+
 }
